Rename crate and add README, zshrc.sh

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,9 @@
 [package]
-name = "zsh-git-prompt"
+name = "gitstat"
+description = "Git status for shell prompt integration"
+repository = "https://github.com/rotty/gitstat"
+homepage = "https://github.com/rotty/gitstat"
+readme = "README.md"
 version = "0.1.0"
 authors = ["Andreas Rottmann <mail@r0tty.org>"]
 license = "MIT"
